; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_submodule.c_submodule_set_lookup_error.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_submodule.c_submodule_set_lookup_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_ERROR_SUBMODULE = common dso_local global i32 0, align 4
@GIT_ENOTFOUND = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"no submodule named '%s'\00", align 1
@.str.1 = private unnamed_addr constant [38 x i8] c"submodule '%s' has not been added yet\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*)* @submodule_set_lookup_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @submodule_set_lookup_error(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %2
  br label %17

8:                                                ; preds = %2
  %9 = load i32, i32* @GIT_ERROR_SUBMODULE, align 4
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @GIT_ENOTFOUND, align 4
  %12 = icmp eq i32 %10, %11
  %13 = zext i1 %12 to i64
  %14 = select i1 %12, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.1, i64 0, i64 0)
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @git_error_set(i32 %9, i8* %14, i8* %15)
  br label %17

17:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @git_error_set(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
